# magpie-literacy

./: .gitignore  README.md  instructions.md
magpie/: README.md  pyproject.toml
magpie/magpie/: main.py  utils.py
magpie/magpie/data/: data.json  proficiency.json  skill_report.csv  skills.json  time-series.json
